@@ -1,3 +1,8 @@
+2004-12-30  Tor Lillqvist  <tml@iki.fi>
+
+	* gtk/gtkicontheme.c (gtk_icon_theme_init): Use /usr/share/pixmaps
+	only on Unix.
+
 2004-12-28  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkmenuitem.c (gtk_menu_item_position_menu): Inherit
