@@ -567,7 +567,10 @@ gtk_icon_theme_init (GtkIconTheme *icon_theme)
   xdg_data_dirs = g_get_system_data_dirs ();
   for (i = 0; xdg_data_dirs[i]; i++) ;
 
-  priv->search_path_len = i + 3;
+  priv->search_path_len = i + 2;
+#ifdef G_OS_UNIX
+  priv->search_path_len++;
+#endif
   
   priv->search_path = g_new (char *, priv->search_path_len);
   
@@ -578,7 +581,9 @@ gtk_icon_theme_init (GtkIconTheme *icon_theme)
   for (j = 0; xdg_data_dirs[j]; j++) 
     priv->search_path[i++] = g_build_filename (xdg_data_dirs[j], "icons", NULL);
 
+#ifdef G_OS_UNIX
   priv->search_path[i++] = g_strdup ("/usr/share/pixmaps");
+#endif
 
   priv->themes_valid = FALSE;
   priv->themes = NULL;
